--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,227 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Language" content="en" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="viewport" content="width=device-width" />
+	<title>PT. Pakarti Inovasi | Home</title>
 
-# Project property files
-.actionScriptProperties
-.flexProperties
-.settings/
-.project
+	<link rel="profile" href="http://gmpg.org/xfn/11" />
+	<link rel="stylesheet" type="text/css" media="screen" href="stylegue.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="skin.css">
+	<!--[if IE]>
+			<link rel="stylesheet" type="text/css" media="screen" href="all-ie-only.css" />
+	<![endif]-->
+	<link rel="pingback" href="" />
+	
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<script type="text/javascript" src="jscript/jquery.js"></script>
+	<script type="text/javascript" src="jscript/pk.js"></script>
+
+<script src="reelslideshow.js" type="text/javascript">
+
+/***********************************************
+* Continuous Reel Slideshow- ɠDynamic Drive (www.dynamicdrive.com)
+* This notice MUST stay intact for legal use
+* Visit http://www.dynamicdrive.com/ for this script and 100s more.
+***********************************************/
+
+</script>
+
+<script type="text/javascript">
+
+var firstreel=new reelslideshow({
+	wrapperid: "myreel", //ID of blank DIV on page to house Slideshow
+	dimensions: [520, 180], //width/height of gallery in pixels. Should reflect dimensions of largest image
+	imagearray: [
+		["images/picture_slide.png"], //["image_path", "optional_link", "optional_target"]
+		["images/picture_slide_2.png", "http://en.wikipedia.org/wiki/Cave", "_new"],
+		["images/picture_slide_3.png"],
+		["images/picture_slide_2.png"] //<--no trailing comma after very last image element!
+	],
+	displaymode: {type:'auto', pause:2000, cycles:10, pauseonmouseover:true},
+	orientation: "h", //Valid values: "h" or "v"
+	persist: true, //remember last viewed slide and recall within same session?
+	slideduration: 300 //transition duration (milliseconds)
+})
+
+</script> 
+<script type="text/javascript" src="oodomimagerollover.js">
+
+/***********************************************
+* DOM Image Rollover II- By Adam Smith (http://www.codevendor.com)
+* Script featured on and available at Dynamic Drive (http://www.dynamicdrive.com)
+* Keep this notice intact for usage please
+***********************************************/
+
+</script>
+</head>
+
+<body>
+	<div id="wrapping">
+		<div id="header">&nbsp
+			<div id="logo"><a href="index.html"></a></div> 
+			<!--[if lte IE 6]><![endif]-->
+			<div id="slogan"></div> 
+			<div id="anchor_menu">
+				<p>
+					<ul>
+						<li><a href="#">Home |</a></li>
+						<li><a href="#">Sitemap |</a></li>
+						<li><a href="#">Contact  |</a></li>	
+					</ul>
+				</p>
+			</div>
+			<div id="navigation">
+			
+				 <div id="menu">
+					<ul>
+						<li class="current"><a href="index.html" title="">Home</a>
+							<ul>
+								<li><a href="index_flash.html" title="">Home Flash</a></li>
+							</ul>
+						</li>
+						<li><a href="aboutus.html" title="">About Us</a>
+							<ul>
+								<li><a href="index_flash.html" title="">Visi</a></li>
+								<li><a href="index_fldsh.html" title="">Misi</a></li>
+								<li><a href="index_fldsh.html" title="">Testimonial</a></li>									
+							</ul>
+						</li>
+						<li><a href="products.html" title="">Products</a>
+							<ul>								
+								<li><a href="product_hardware.html" title="">Hardware</a></li>
+								<li><a href="product_software.html" title="">Software</a></li>						
+								<li><a href="jasa_pelayanan.html" title="">Jasa Pelayanan</a>									
+								</li>
+							</ul>
+						
+						
+						</li>
+							
+						<li><a href="services.html" title="">Services</a>											
+						</li>
+											
+						<li><a href="contactus.html" title="">Contact Us</a>
+								
+						</li>
+					</ul>
+				</div> 
+						
+				
+				<div id="search">
+					<form method="post" action="" id="searchform">
+						<input type="text" class="input_search" name="search" value="Search..." onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}" />
+						<input type="" name="btnSearch" id="btnSearch" />
+									
+					</form>				
+				</div> 
+				
+			</div> 
+		</div> 
+		
+		<div id="main">		
+			<div id="main_content">
+				<div id="content_right">
+					<div id="myreel"></div>
+					<!--<div class="paginate">
+					= <a href="javascript:firstreel.navigate('back')" style="margin-right:200px;">back</a>  <a href="javascript:firstreel.navigate('forth')">forth</a> =
+					</div>-->
+					<div id="article">
+						<div class="sub_menu">News</div>
+						<div id="column_article">
+							<div class="picture"></div>
+							<div class="discriptions"><h2>Pengadaan Storage di PGN</h2><p><a href="#">Lorem ipsum</a> Pengadaan server storage di Surabaya PT. PGN Jalan Pemuda No. 56-58 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pengadaan server storage di Surabaya.<p>
+							<p><a href="#">Lorem ipsum</a> Pengadaan server storage di Surabaya PT. PGN Jalan Pemuda No. 56-58 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pengadaan server storage di Surabaya.<p><p><a href="#">Lorem ipsum</a> Pengadaan server storage di Surabaya PT. PGN Jalan Pemuda No. 56-58 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pengadaan server storage di Surabaya.<p><p><a href="#">Lorem ipsum</a> Pengadaan server storage di Surabaya PT. PGN Jalan Pemuda No. 56-58 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pengadaan server storage di Surabaya.<p>
+							
+							
+							<div class="readmore"><img src="images/readmore.png" srcover="images/readmore_hover.png"></div>
+							</div>
+													
+						</div>											
+					</div>
+					<div id="column_right">
+						<div id="introduction"><p>Director Introduction</p>
+							<div class="intro_picture"></div>
+							<div class="discriptions"><p>Salam sejahtera, 
+					Sungguh suatu kehormatan bagi saya bisa berkontribusi di perusahaan ini. Kemajuan yang luar biasa pada perusahaan ini karena dalam waktu singkat...	 	
+					</p><p>Salam sejahtera, 	
+</div>
+							<div class="readmore"><img src="images/readmore.png" srcover="images/readmore_hover.png"></div>
+						</div> 
+						<div id="clients"><p>Clients</p>
+							<div id="column_clients">
+								<div class="add_picture"><p>C1</p></div>
+								<div class ="link"><a href="#">PT. Infoglobal Autoptima</a><br/><span>Clients</span></div>
+							</div>
+							<div id="column_clients">
+								<div class="add_picture"><p>C2</p></div>
+								<div class ="link"><a href="#">PT. Mulia Abadi</a><br/><span>Clients</span></div>
+							</div>
+							<div id="column_clients">
+								<div class="add_picture"><p>C3</p></div>
+								<div class ="link"><a href="#">PT. Puncak Kreasi Prima</a><br/><span>Clients</span></div>
+							</div>
+							<div id="column_clients">
+								<div class="add_picture"><p>C4</p></div>
+								<div class ="link"><a href="#">PT. Granmedia</a><br/><span>Clients</span></div>
+							</div>
+							<div id="column_clients">
+								<div class="add_picture"><p>C5</p></div>
+								<div class ="link"><a href="#">PT. Ajinomoto</a><br/><span>Clients</span></div>
+							</div>							
+							<div class="readmore"><img src="images/readmore.png" srcover="images/readmore_hover.png"></div>						
+						</div> 												
+					</div>
+					
+				</div> 
+				<br/>	
+				
+			</div> 
+				<div id="sidebar_left">
+					<div id="category">
+						<div id="category_1"><h1><a href="#">Hardware</a></h1>
+							<div class="cat_picture"></div>
+							<div class="discriptions"><p>PT. PAKARTI INOVASI berpartner dengan prisiple atau distributor produk hardware  <p></div>
+							<div class="readmore"><a href="#"><p>read more</p></a></div>		
+						</div> 
+						<div id="category_2"><h1><a href="#">Software</a></h1>
+							<div class="cat_picture"></div>
+							<div class="discriptions"><p>PT.Pakarti Inovasi juga berpartner dengan principle / distributor produk lisensi perangkat lunak <p></div>
+							<div class="readmore"><a href="#"><p>read more</p></a></div>		
+						</div>
+						<div id="category_3"><h1><a href="#">Pelayanan Jasa</a></h1>
+							<div class="cat_picture"></div>
+							<div class="discriptions"><p>Untuk memenuhi perlengkapan kebutuhan kantor PT. PAKARTI INOVASI juga menjual produk-produk  <p></div>
+							<div class="readmore"><a href="#"><p>read more</p></a></div>			
+						</div>												
+					</div>					
+				</div>
+				<div id="address">
+						<div class="sub_menu_address">Office Address</div> 
+						<div class="detail"><p>Jl: Sriwijaya 36, Surabaya, Indonesia 60265 
+						<br/>Telp. : +6231 5661 802; +6231 5661 803
+						<br/>Fax. : +6231 5661 990</p>
+						
+						</div> 
+						
+				</div>					
+				
+				
+		</div> 
+		<div id="footer">
+			<div class="copyright"><span><a href="#top">PT. Pakarti Inovasi</a></span>  |  All Right Reserved  | <span>Recommended for Mozilla Firefox</span></div>
+		</div> 
+		
+	</div> 	
+	
+	
+</body>
+
+</html> 
+
+
+
